# rust-os

./: Cargo.toml  README.md  flake.nix  limine.conf
.cargo/: config.toml
kernel/: Cargo.toml  build.rs
kernel/src/: main.rs
src/: allocator.rs  gdt.rs  interupts.rs  lib.rs  main.rs  memory.rs  serial.rs  vga_buffer.rs
src/drivers/: ata.rs
src/task/: keyboard.rs  mod.rs  simple_executor.rs
tests/: basic_boot.rs  heap_allocation.rs  should_panic.rs  stack_overflow.rs
